--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Poru Music",
+  "name": "Poru_Music",
   "version": "1.0.1",
   "description": "An example bot on how I to use poru in a basic level",
   "main": "index.js",
