--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "Poru_Music",
+  "name": "music",
   "version": "1.0.1",
   "description": "An example bot on how I to use poru in a basic level",
   "main": "index.js",
   "dependencies": {
     "ascii-table": "0.0.9",
     "chunk": "0.0.3",
+    "discord-api-types": "^0.35.0",
     "discord.js": "^13.8.1",
     "ms": "^2.1.3",
-    "poru": "github:parasop/poru"
+    "poru": "^1.1.5"
   },
   "devDependencies": {
     "node": "^16.14.2"
