--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "chunk": "0.0.3",
     "discord-api-types": "^0.35.0",
     "discord.js": "^13.8.1",
+    "dotenv": "^16.0.1",
     "ms": "^2.1.3",
-    "poru": "^1.1.5"
-  },
-  "devDependencies": {
-    "node": "^16.14.2"
+    "poru": "git+https://github.com/parasop/poru.git"
   },
   "scripts": {
     "start": "node index.js",
@@ -32,5 +30,8 @@
   "bugs": {
     "url": "https://github.com/parasop/poru-example/issues"
   },
-  "homepage": "https://github.com/parasop/poru-example#readme"
+  "homepage": "https://github.com/parasop/poru-example#readme",
+  "devDependencies": {
+    "node": "^16.15.1"
+  }
 }
