--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "index.js",
   "dependencies": {
     "ascii-table": "0.0.9",
+    "cheerio": "^1.0.0-rc.12",
     "chunk": "0.0.3",
     "discord-api-types": "^0.35.0",
     "discord.js": "^13.8.1",
     "dotenv": "^16.0.1",
     "ms": "^2.1.3",
-    "poru": "git+https://github.com/parasop/poru.git"
+    "poru": "git+https://github.com/parasop/poru.git",
+    "undici": "^5.6.1"
   },
   "scripts": {
     "start": "node index.js",
-    "node-update": "npm i --save-dev node@16 && npm config set prefix=$(pwd)/node_modules/node && export PATH=$(pwd)/node_modules/node/bin:$PATH",
+    "node-update": "npm i --save-dev node@17 && npm config set prefix=$(pwd)/node_modules/node && export PATH=$(pwd)/node_modules/node/bin:$PATH",
     "node-clean": "rm -rf node_modules && rm package-lock.json && npm cache clear --force && npm cache clean --force && npm i",
     "node-update-then-clean": "npm run node-update && npm run node-clean"
   },
@@ -32,6 +34,6 @@
   },
   "homepage": "https://github.com/parasop/poru-example#readme",
   "devDependencies": {
-    "node": "^16.15.1"
+    "node": "^16.8.0"
   }
 }
