--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "music",
+  "name": "poru-example",
   "version": "2.0.1",
   "description": "An example bot on how to use poru in a basic level",
   "main": "index.js",
   "dependencies": {
-    "ascii-table": "0.0.9",
-    "discord.js": "^14.0.1",
+    "ascii-table": "^0.0.9",
+    "discord.js": "^14.0.3",
     "dotenv": "^16.0.1",
     "ms": "^2.1.3",
-    "poru": "git+https://github.com/parasop/poru.git"
+    "poru": "github:parasop/poru"
   },
   "scripts": {
     "start": "node .",
